--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,7 +1,20 @@
 <% layout("./layouts/boilerplate") %>
 
 <style>
-  #filters{
+  #filter {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .filters{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 2rem;
+    margin-top: 2rem;
+    opacity: 0.7;
+  }
+  /* #filters{
     margin-top: 1rem;
     display: flex;
     flex-wrap: wrap;
@@ -12,7 +25,7 @@
     margin-right: 2rem;
     margin-top: 2rem;
     opacity: 0.7;
-  }
+  } */
   .filter:hover{
     opacity: 1;
     cursor: pointer;
@@ -33,11 +46,16 @@
     align-items: center;
 
   }
+  a.filters {
+  text-decoration: none;
+  color: inherit;
+}
+
 </style>
 
 <body>
    <!-- <h3>All Listings</h3>-->
-    <div id="filters">
+    <!--<div id="filters">
       <div class="filter">
           <div><i class="fa-solid fa-fire"></i></div>
           <p>Trending</p>
@@ -81,7 +99,63 @@
       <div class="filter">
           <div><i class="fa-solid fa-ship"></i></div>
           <p>Boats</p>
-      </div>
+      </div>-->
+
+      <div id="filter">
+  <a href="/listings/category/Trending" class="filters">
+    <div><i class="fa-solid fa-fire"></i></div>
+    <p>Trending</p>
+  </a>
+
+  <a href="/listings/category/Rooms" class="filters">
+    <div><i class="fa-solid fa-bed"></i></div>
+    <p>Rooms</p>
+  </a>
+
+  <a href="/listings/category/Iconic%20cities" class="filters">
+    <div><i class="fa-solid fa-mountain-city"></i></div>
+    <p>Iconic cities</p>
+  </a>
+
+  <a href="/listings/category/Mountains" class="filters">
+    <div><i class="fa-solid fa-mountain-sun"></i></div>
+    <p>Mountains</p>
+  </a>
+
+  <a href="/listings/category/Castles" class="filters">
+    <div><i class="fa-solid fa-chess-rook"></i></div>
+    <p>Castles</p>
+  </a>
+
+  <a href="/listings/category/Amazing%20Pools" class="filters">
+    <div><i class="fa-solid fa-person-swimming"></i></div>
+    <p>Amazing Pools</p>
+  </a>
+
+  <a href="/listings/category/Camping" class="filters">
+    <div><i class="fa-solid fa-campground"></i></div>
+    <p>Camping</p>
+  </a>
+
+  <a href="/listings/category/Farm" class="filters">
+    <div><i class="fa-solid fa-cow"></i></div>
+    <p>Farm</p>
+  </a>
+
+  <a href="/listings/category/Arctic" class="filters">
+    <div><i class="fa-solid fa-snowflake"></i></div>
+    <p>Arctic</p>
+  </a>
+
+  <a href="/listings/category/Domes" class="filters">
+    <div><i class="fa-solid fa-igloo"></i></div>
+    <p>Domes</p>
+  </a>
+
+  <a href="/listings/category/Boats" class="filters">
+    <div><i class="fa-solid fa-ship"></i></div>
+    <p>Boats</p>
+  </a>
 
       <div class="tax-toggle">
           <div class="form-check-reverse form-switch">
