--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,20 +1,8 @@
 <% layout("./layouts/boilerplate") %>
 
 <style>
-  #filter {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-  .filters{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 2rem;
-    margin-top: 2rem;
-    opacity: 0.7;
-  }
-  /* #filters{
+
+  #filters{
     margin-top: 1rem;
     display: flex;
     flex-wrap: wrap;
@@ -25,7 +13,7 @@
     margin-right: 2rem;
     margin-top: 2rem;
     opacity: 0.7;
-  } */
+  } 
   .filter:hover{
     opacity: 1;
     cursor: pointer;
@@ -46,7 +34,7 @@
     align-items: center;
 
   }
-  a.filters {
+  a.filter {
   text-decoration: none;
   color: inherit;
 }
@@ -54,108 +42,56 @@
 </style>
 
 <body>
-   <!-- <h3>All Listings</h3>-->
-    <!--<div id="filters">
-      <div class="filter">
+   
+    <div id="filters">
+      <a href="/listings/category/Trending" class="filter">
           <div><i class="fa-solid fa-fire"></i></div>
           <p>Trending</p>
-      </div>
-      <div class="filter">
+      </a>
+      <a href="/listings/category/Rooms" class="filter">
           <div><i class="fa-solid fa-bed"></i></div>
           <p>Rooms</p>
-      </div>
-      <div class="filter">
+      </a>
+      <a href="/listings/category/Iconic%20cities" class="filter">
           <div><i class="fa-solid fa-mountain-city"></i></div>
           <p>Iconic City</p>
-      </div>
-      <div class="filter">
+      </a>
+      <a href="/listings/category/Mountains" class="filter">
           <div><i class="fa-solid fa-mountain"></i></div>
           <p>Mountains</p>
-      </div>
-      <div class="filter">
+      </a>
+      <a href="/listings/category/Castles" class="filter">
           <div><i class="fa-brands fa-fort-awesome"></i></div>
           <p>Castles</p>
-      </div>
-      <div class="filter">
+      </a>
+      <a href="/listings/category/Amazing%20Pools" class="filter">
           <div><i class="fa-solid fa-person-swimming"></i></div>
           <p>Amazing pools </p>
-      </div>
-      <div class="filter">
+      </a>
+      <a href="/listings/category/Camping" class="filter">
           <div><i class="fa-solid fa-campground"></i></div>
           <p>Camping</p>
-      </div>
-      <div class="filter">
+      </a>
+      <a href="/listings/category/Farm" class="filter">
           <div><i class="fa-solid fa-cow"></i></div>
           <p>Farms</p>
-      </div>
-      <div class="filter">
+      </a>
+      <a href="/listings/category/Arctic" class="filter">
           <div><i class="fa-regular fa-snowflake"></i></div>
           <p>Arctic</p>
-      </div>
-      <div class="filter">
+      </a>
+      <a href="/listings/category/Domes" class="filter">
           <div><i class="fa-solid fa-igloo"></i></div>
           <p>Domes</p>
-      </div>
-      <div class="filter">
+      </a>
+      <a href="/listings/category/Boats" class="filter">
           <div><i class="fa-solid fa-ship"></i></div>
           <p>Boats</p>
-      </div>-->
+      </a>
 
-      <div id="filter">
-  <a href="/listings/category/Trending" class="filters">
-    <div><i class="fa-solid fa-fire"></i></div>
-    <p>Trending</p>
-  </a>
+      
 
-  <a href="/listings/category/Rooms" class="filters">
-    <div><i class="fa-solid fa-bed"></i></div>
-    <p>Rooms</p>
-  </a>
-
-  <a href="/listings/category/Iconic%20cities" class="filters">
-    <div><i class="fa-solid fa-mountain-city"></i></div>
-    <p>Iconic cities</p>
-  </a>
-
-  <a href="/listings/category/Mountains" class="filters">
-    <div><i class="fa-solid fa-mountain-sun"></i></div>
-    <p>Mountains</p>
-  </a>
-
-  <a href="/listings/category/Castles" class="filters">
-    <div><i class="fa-solid fa-chess-rook"></i></div>
-    <p>Castles</p>
-  </a>
-
-  <a href="/listings/category/Amazing%20Pools" class="filters">
-    <div><i class="fa-solid fa-person-swimming"></i></div>
-    <p>Amazing Pools</p>
-  </a>
-
-  <a href="/listings/category/Camping" class="filters">
-    <div><i class="fa-solid fa-campground"></i></div>
-    <p>Camping</p>
-  </a>
-
-  <a href="/listings/category/Farm" class="filters">
-    <div><i class="fa-solid fa-cow"></i></div>
-    <p>Farm</p>
-  </a>
-
-  <a href="/listings/category/Arctic" class="filters">
-    <div><i class="fa-solid fa-snowflake"></i></div>
-    <p>Arctic</p>
-  </a>
-
-  <a href="/listings/category/Domes" class="filters">
-    <div><i class="fa-solid fa-igloo"></i></div>
-    <p>Domes</p>
-  </a>
-
-  <a href="/listings/category/Boats" class="filters">
-    <div><i class="fa-solid fa-ship"></i></div>
-    <p>Boats</p>
-  </a>
+  
 
       <div class="tax-toggle">
           <div class="form-check-reverse form-switch">
