--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -33,10 +33,12 @@
         </div>
 
         <div class="navbar-nav ms-auto">
-           <form class="d-flex" role="search">
-           <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations" />
-           <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
-           </form>
+          <form class="d-flex" role="search" action="/listings/search" method="GET">
+            <input class="form-control me-2 search-inp" type="search" name="q" placeholder="search destinations" required>
+            <button class="btn search-btn" type="submit">
+              <i class="fa-solid fa-magnifying-glass"></i>Search</button>
+          </form>
+
         </div>
 
         <div class="navbar-nav ms-auto">
