--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -5,10 +5,10 @@
             <i class="fa-brands fa-square-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
         </div>
-        <div class="f-info-brand">&copy;Wanderlust Private Limited</div>
+        <div class="f-info-brand">&copy;Hopinest Private Limited</div>
         <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
+            <a href="/privacy" style="color: #fefae0;">Privacy</a>
+            <a href="/terms" style="color: #fefae0;">Terms</a>
         </div>
     </div>
 </footer>
