--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,12 +1,12 @@
 <% layout("./layouts/boilerplate") %>
-<div class="row mt-3">
+<div class="row-home mb-4 mt-4">
     <div class="col-8 offset-2" >
         
-    <h3>Create a new listing</h3>
+    <h3 class="mt-2">Create a new listing</h3>
     <form method="post" action="/listings" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
-            <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required >
+            <input name="listing[title]" style="border-radius: 1rem; border: 1px solid #8b2f2f;" placeholder="Add a catchy title" type="text" class="form-control" required >
             <div class="valid-feedback">
                 Title Looks Good!
             </div>
@@ -14,7 +14,7 @@
         
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <textarea name="listing[description]" class="form-control" required></textarea>
+            <textarea name="listing[description]" style="border-radius: 1rem; border: 1px solid #8b2f2f;" class="form-control" required></textarea>
             <div class="invalid-feedback">
                 Please Enter a sort description
             </div>
@@ -23,14 +23,14 @@
 
           <div class="mb-3">
             <label for="image" class="form-label">Upload Listing Image</label>
-            <input name="listing[image][url]" type="file" class="form-control">
+            <input name="listing[image][url]" style="border-radius: 1rem; border: 1px solid #8b2f2f;" type="file" class="form-control">
          </div>
 
         <div class="row">
 
         <div class="mb-3 col-md-4" >
                 <label for="price" class="form-label">Price</label>
-                <input name="listing[price]" placeholder="1200"  class="form-control" required>
+                <input name="listing[price]" style="border-radius: 1rem; border: 1px solid #8b2f2f;" placeholder="1200"  class="form-control" required>
                 <div class="invalid-feedback">
                     Please enter valid price
                 </div>
@@ -38,7 +38,7 @@
 
         <div class="mb-3 col-md-8">
         <label for="category" class="form-label">Category</label>
-        <select id="category" name="listing[category]" class="form-control" required>
+        <select id="category" style="border-radius: 1rem; border: 1px solid #8b2f2f;" name="listing[category]" class="form-control" required>
           <option value="">Select a category</option>
           <option value="Trending">Trending</option>
           <option value="Rooms">Rooms</option>
@@ -57,7 +57,7 @@
 
         <div class="mb-3 col-md-8">
                 <label for="country" class="form-label">Country</label>
-                <input name="listing[country]" placeholder="India" type="text" class="form-control" required>
+                <input name="listing[country]" style="border-radius: 1rem; border: 1px solid #8b2f2f;" placeholder="India" type="text" class="form-control" required>
                 <div class="invalid-feedback">
                  Country shoud be valid
                 </div>
@@ -68,7 +68,7 @@
 
         <div class="mb-3">
             <label for="location" class="form-label">Location</label>
-            <input name="listing[location]" placeholder="Jaipu, Rajasthan" type="text" class="form-control" required>
+            <input name="listing[location]" style="border-radius: 1rem; border: 1px solid #8b2f2f;" placeholder="Jaipu, Rajasthan" type="text" class="form-control" required>
             <div class="invalid-feedback">
                  Location shoud be valid 
             </div>
@@ -76,7 +76,7 @@
 
         
       
-        <button class="btn btn-dark add-btn mt-3">Add</button>
+        <button class="btn mt-3" style="background-color:#8b2f2f; color:#f5f0e1; margin-bottom: 1rem;">Add</button>
         
 
     </form>
