--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,21 +5,22 @@
 </script>
 
      <div class="row mt-3">
-        <div class="col-8 offset-3">
+        <div class="col-8 offset-3 mt-3">
             <h3><%= listing.title %> </h3>
         </div>
-
-            <div class="card col-6 offset-3 show-card listing-card">
+            <div class="col-6 offset-3 px-0">
+            <div class="card  show-card listing-card p-0">
 
                 <img src="<%= listing.image.url%>" class="card-img-top show-img" alt="listing_image">
                 <div class="card-body">
-                  <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
+                  <p class="card-text">Owned by <b><i><%= listing.owner.username %></i></b></p>
                   <p class="card-text"> <%= listing.description %></p> 
-                  <p class="card-text">  &#8377;<%= listing.price %></p>
-                  <p class="card-text"> <%= listing.location %></p>
-                  <p class="card-text"><%= listing.country %></p>
+                  <p class="card-text">Price: &#8377;<%= listing.price %></p>
+                  <p class="card-text"><i class="fa-solid fa-location-dot"></i> <%= listing.location %>, <%= listing.country %></p>
+                  
                   
                 </div>
+            </div>
             </div>
             <br>
             
@@ -27,12 +28,9 @@
 
    <% //if(currUser && listing.owner._id.equals(currUser._id)){ %>
  <div class="btns">
-    <a href="/listings/<%=listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
- 
-
-
-     <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
-         <button class="btn btn-dark offset-5">Delete</button>
+    <a href="/listings/<%=listing._id %>/edit" class="btn col-1 offset-3 " style="background-color:#8b2f2f; color:#f5f0e1;">Edit</a>
+      <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
+         <button class="btn offset-5" style="background-color:#8b2f2f; color:#f5f0e1;">Delete</button>
      </form>
  </div>
  <% //} %>
@@ -68,12 +66,12 @@
 
     <div class="mb-3 mt-3">
       <label for="comment" class="form-label">Comments</label>
-      <textarea required name="review[comment]" id="comment" rows="5" cols="20" class="form-control"></textarea>
+      <textarea required name="review[comment]" style="border-radius: 1rem; border: 1px solid #8b2f2f;" id="comment" rows="5" cols="20" class="form-control"></textarea>
       <div class="invalid-feedback">
         Please add some comments for review
       </div>
     </div>
-    <button class="btn btn-outline-dark">Submit</button>
+    <button class="btn btn-outline-dark" style="background-color:#8b2f2f; color:#f5f0e1; ">Submit</button>
   </form>
   <% } %>
   
